--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">CasaInteligente</string>
     <string name="main_msj_bienvenida">Aplicación casa inteligente, maneje las luces con los interruptores verá a continuación</string>
+    <string name="main_btn_conectar">Conectar</string>
     <string name="main_btn_habitaciones">Habitaciones</string>
     <string name="main_btn_escenarios">Escenarios</string>
     <string name="hab_msj_principal">Encienda o apague manualmente las habitaciones</string>
